[gd_scene load_steps=11 format=2]

[ext_resource path="res://Themes/Fonts/times.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Assets/Colors/Background.png" type="Texture" id=2]
[ext_resource path="res://Themes/Fonts/RIKY2vamp.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Scenes/Game.gd" type="Script" id=4]
[ext_resource path="res://Assets/Colors/Fail.png" type="Texture" id=5]
[ext_resource path="res://Assets/Sounds/Context Sensitive - 20XX - 18 Aeon Prime.wav" type="AudioStream" id=6]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 144.25, 676.25 )

[sub_resource type="DynamicFont" id=3]
size = 256
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 64
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 1 )

[node name="Game" type="Node2D"]
script = ExtResource( 4 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )
volume_db = -20.0
autoplay = true

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = -1162.0
margin_top = -636.0
margin_right = 1140.0
margin_bottom = 642.0
texture = ExtResource( 2 )
stretch_mode = 2

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="EndArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="EndArea"]
position = Vector2( -1161, 4 )
shape = SubResource( 2 )

[node name="SpawnContainer" type="Node2D" parent="."]

[node name="1-8" type="Position2D" parent="SpawnContainer"]
position = Vector2( 1058, -415 )

[node name="1-4" type="Position2D" parent="SpawnContainer"]
position = Vector2( 1058, -213 )

[node name="1-2" type="Position2D" parent="SpawnContainer"]
position = Vector2( 1058, 0 )

[node name="3-4" type="Position2D" parent="SpawnContainer"]
position = Vector2( 1058, 206 )

[node name="7-8" type="Position2D" parent="SpawnContainer"]
position = Vector2( 1058, 423 )

[node name="Words" type="Node2D" parent="."]

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 3.0

[node name="DifficultyTimer" type="Timer" parent="."]
wait_time = 15.0

[node name="GameTimer" type="Timer" parent="."]
wait_time = 60.0

[node name="UI" type="CanvasLayer" parent="."]

[node name="GameOverScreen" type="PanelContainer" parent="UI"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1

[node name="TextureRect" type="TextureRect" parent="UI/GameOverScreen"]
margin_left = 7.0
margin_top = 7.0
margin_right = 1913.0
margin_bottom = 1073.0
texture = ExtResource( 5 )
stretch_mode = 2

[node name="CenterContainer" type="CenterContainer" parent="UI/GameOverScreen"]
margin_left = 7.0
margin_top = 7.0
margin_right = 1913.0
margin_bottom = 1073.0
mouse_filter = 1

[node name="VBoxContainer" type="VBoxContainer" parent="UI/GameOverScreen/CenterContainer"]
margin_left = 663.0
margin_top = 292.0
margin_right = 1243.0
margin_bottom = 773.0
custom_constants/separation = 15

[node name="Label" type="Label" parent="UI/GameOverScreen/CenterContainer/VBoxContainer"]
margin_right = 580.0
margin_bottom = 295.0
custom_colors/font_color = Color( 1, 0.333333, 0.333333, 1 )
custom_fonts/font = SubResource( 3 )
text = "R.I.P"

[node name="RestartButton" type="Button" parent="UI/GameOverScreen/CenterContainer/VBoxContainer"]
margin_top = 310.0
margin_right = 580.0
margin_bottom = 388.0
custom_colors/font_color = Color( 0.313726, 0.980392, 0.482353, 1 )
custom_fonts/font = SubResource( 4 )
text = "Try again..."

[node name="MainMenuButton" type="Button" parent="UI/GameOverScreen/CenterContainer/VBoxContainer"]
margin_top = 403.0
margin_right = 580.0
margin_bottom = 481.0
custom_colors/font_color = Color( 0.870588, 0.870588, 0.870588, 1 )
custom_fonts/font = SubResource( 4 )
text = "Main Menu"

[node name="VBoxContainer" type="VBoxContainer" parent="UI"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="CenterContainer" type="CenterContainer" parent="UI/VBoxContainer"]
margin_right = 1920.0
margin_bottom = 72.0
mouse_filter = 2

[node name="TopRow" type="HBoxContainer" parent="UI/VBoxContainer/CenterContainer"]
margin_left = 747.0
margin_right = 1172.0
margin_bottom = 72.0
mouse_filter = 2

[node name="WordsTypedLabel" type="Label" parent="UI/VBoxContainer/CenterContainer/TopRow"]
margin_right = 373.0
margin_bottom = 72.0
custom_fonts/font = SubResource( 1 )
text = "Words Typed: "

[node name="WordsTypedCountLabel" type="Label" parent="UI/VBoxContainer/CenterContainer/TopRow"]
margin_left = 377.0
margin_right = 425.0
margin_bottom = 72.0
custom_fonts/font = SubResource( 1 )
text = "0 "

[node name="MiddleRow" type="HBoxContainer" parent="UI/VBoxContainer"]
margin_top = 76.0
margin_right = 1920.0
margin_bottom = 1004.0
mouse_filter = 2
size_flags_vertical = 3

[node name="BottomRow" type="HBoxContainer" parent="UI/VBoxContainer"]
margin_top = 1008.0
margin_right = 1920.0
margin_bottom = 1080.0
mouse_filter = 2

[node name="DifficultyLabel" type="Label" parent="UI/VBoxContainer/BottomRow"]
margin_right = 285.0
margin_bottom = 72.0
custom_fonts/font = SubResource( 1 )
text = "Difficulty: "

[node name="DifficultyCountLabel" type="Label" parent="UI/VBoxContainer/BottomRow"]
margin_left = 289.0
margin_right = 337.0
margin_bottom = 72.0
custom_fonts/font = SubResource( 1 )
text = "0 "

[connection signal="body_entered" from="EndArea" to="." method="_on_EndArea_body_entered"]
[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]
[connection signal="timeout" from="DifficultyTimer" to="." method="_on_DifficultyTimer_timeout"]
[connection signal="timeout" from="GameTimer" to="." method="_on_GameTimer_timeout"]
[connection signal="pressed" from="UI/GameOverScreen/CenterContainer/VBoxContainer/RestartButton" to="." method="_on_RestartButton_pressed"]
[connection signal="pressed" from="UI/GameOverScreen/CenterContainer/VBoxContainer/MainMenuButton" to="." method="_on_MainMenuButton_pressed"]
[connection signal="pressed" from="UI/GameOverScreen/CenterContainer/VBoxContainer/MainMenuButton" to="." method="_on_RestartButton2_pressed"]
[connection signal="pressed" from="UI/GameOverScreen/CenterContainer/VBoxContainer/MainMenuButton" to="." method="_on_RestartButton_pressed"]
